updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi there, my name is Nick and I'm an aspiring software developer! I'm extremely excited to excel in this course and start a promising new career!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm currently located in Houston, Texas but I come from sunny Clearwater, Florida!</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I'm hugely obsessed with Major League Baseball and Magic: The Gathering. I also enjoy listening to music, reading and hiking nature trails </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I would love to work for the MLB in any capacity, especially relateed to data analytics.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
-      <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I live in the Montrose area in Houston, Texas</p>
+      <h1>Why do you want to be a web developer? </h1>
+      <p>I have always been interested in computers and the internet. I'm a logical thinker and problem-solver which I feel will help me be a succesful developer. I know that development and software engineering are now crucial in almost every sector and industry and I want to be a part this exciting and growing field of talented developers.</p>
     </section>
 
     <footer id="footer">
